...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.who.dcangs.Register">


    <EditText
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="63dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nama" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nama"
        android:layout_below="@+id/nama"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Email" />

    <EditText
        android:id="@+id/nohp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="No Hp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/nohp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password" />

    <Button
        android:id="@+id/btnRegistrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Register"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
...
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:background="#6e716e">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userPict"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/user"
            app:civ_border_width="2dp"/>

...
